--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: yumbootstrap
 Maintainer: Stanislaw Klekot <dozzie@jarowit.net>
 Section: admin
 Priority: extra
-Build-Depends: debhelper (>> 9.0.0), make, python, python-support,
- python-setuptools
+Build-Depends: debhelper (>> 9.0.0), make, python, python-setuptools
 # the version is just a wild guess
 X-Python-Version: >= 2.3
 
