--- a/debian/rules
+++ b/debian/rules
@@ -1,11 +1,11 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@
+	dh $@ --with=python2
 
 override_dh_auto_build:
 	python setup.py build
 
 override_dh_auto_install:
 	make install-notmodule DESTDIR=$(CURDIR)/debian/tmp BINDIR=/usr/sbin SYSCONFDIR=/etc
-	python setup.py install --root=$(CURDIR)/debian/tmp --prefix=/usr --exec-prefix=/usr
+	python setup.py install --root=$(CURDIR)/debian/tmp --install-layout=deb --no-compile
